📝 Address lint